# hawkdove

./: .gitignore  README.md  __init__.py  bruteforce.py  hawkdove.py  pyproject.toml  requirements.txt  simulation.py
experimental/: winrates.py
hawkdove/: core.py  perturbation.py  simulation.py
miscellaneous/: winrates.py
tests/: test_logic.py  unit_tests.py
