[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hawkdove"
version = "0.1.0"
description = "hawk-dove-bully-retaliator simulation for CMPLXSYS 511"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
